# git-alias2

./: .gitignore  g.py  pyproject.toml  readme.md  requirements.txt  upgrade-plan.md
core/: azure_cli_manager.py  command_wrappers.py  config.py  decorators.py  diagnostics.py  exceptions.py  git_manager.py  github_cli_manager.py  repo_analyzer.py  subprocess_utils.py  utils.py
core/providers/: azure.py  base.py  github.py  gitlab.py  registry.py
tests/: test_azure_cli_manager.py  test_command_wrappers.py  test_config.py  test_git_manager.py  test_github_cli_manager.py  test_tag_command.py
